--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -2665,6 +2665,22 @@ spec:
                     Optional: Detailed location of the cluster, like "Hamburg" or "Datacenter 7".
                     For informational purposes in the Kubermatic dashboard only.
                   type: string
+                managementProxySettings:
+                  description: |-
+                    ManagementProxySettings can be used if the KubeAPI of the user clusters
+                    will not be directly available from kkp and a proxy in between should be used
+                  properties:
+                    proxyHost:
+                      description: If set, the proxy will be used
+                      type: string
+                    proxyPort:
+                      description: the proxies port to be used
+                      format: int32
+                      type: integer
+                    proxyProtocol:
+                      description: the protocol to use ("http", "https", and "socks5" schemes are supported)
+                      type: string
+                  type: object
                 metering:
                   description: Metering configures the metering tool on user clusters across the seed.
                   properties:
@@ -3052,22 +3068,6 @@ spec:
                     Optional: This can be used to override the DNS name used for this seed.
                     By default the seed name is used.
                   type: string
-                managementProxySettings:
-                  description: |-
-                    Optional: ManagementProxySettings can be used if the KubeAPI of the user clusters
-                    will not be directly available from kkp and a proxy in between should be used
-                  properties:
-                    proxyHost:
-                      description: 'Optional: If set, the proxy will be used'
-                      type: string
-                    proxyPort:
-                      description: 'Optional: the proxies port to be used'
-                      type: integer
-                    proxyProtocol:
-                      description: 'Optional: the protocol to use ("http", "https", and "socks5" schemes are supported)'
-                      type: string
-                      default: "http"
-                  type: object
               required:
                 - kubeconfig
               type: object
